package ar.edu.utn.frba.ddsi.common;

public interface MedioContacto {
  void notificar(String mensaje);
}
