package ar.edu.utn.frba.ddsi.common.models.enums;

public enum TipoEstadoDonacion {
  EN_DEPOSITO, ASIGNACION_REALIZADA, LISTA_PARA_ENTREGAR, EN_TRASLADO, ENTREGADA, ENTREGA_FALLIDA, VENCIDA
}
