package ar.edu.utn.frba.ddsi.logistica.dto;

import lombok.Data;

@Data
public class EntidadBeneficiariaDTO {
    private Long id;
    private String direccion;
}
