@startuml DonaTrack
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 60
skinparam ranksep 80
hide empty members

class ImportadorDonantes {
  importarDonantes(archivo : string) : void
}

class Donante {
  donaciones : List<RegistroDonacion>
  agregarDonacion(donacion: RegistroDonacion) : void
}

class PersonaHumana {
  donante : Donante
  nombre: String
  apellido: String
  fechaNacimiento: LocalDate
  dni : String
  genero: String
  direccion: String
  contactos: List<MedioContacto>
  contactoPredeterminado: MedioContacto
}

class PersonaJuridica {
  donante : Donante
  razonSocial: String
  rubro: String
  tipo: TipoOrganizacion
  cuit : String
  representantes: List<Representante>
  contactos: List<MedioContacto>
  contactoPredeterminado: MedioContacto
}

class Representante {
  nombre: String
  apellido: String
  correo : Email
}

enum TipoOrganizacion {
  Gubernamental
  ONG
  Empresa
  Institucion
}

interface MedioContacto {
  notificar(mensaje : String)
}

class Email {
  valor : string
  notificar(mensaje : String)
}

class Telefono {
  valor : string
  notificar(mensaje : String)
}

class WhatsApp {
  valor : string
  notificar(mensaje : String)
}

class RegistroDonacion {
  descripcion : String
  fecha : LocalDateTime
  bienes : List<Bien>
  donacionesSegmentadas : List<Donacion>
  segmentarDonacion() : void
}

class Donacion {
  subcategoria : Subcategoria
  estadoBienes : EstadoBien
  fechaVencimiento : LocalDate
  bienes : List<Bien>
  fecha : LocalDateTime
  historialEstados : List<CambioEstado>
  estadoActual() : TipoEstadoDonacion
}

class CambioEstado {
  fecha : LocalDateTime
  estado : TipoEstadoDonacion
  justificacion : String
}

enum TipoEstadoDonacion {
  EN_DEPOSITO
  ASIGNACION_REALIZADA
  LISTA_PARA_ENTREGAR
  EN_TRASLADO
  ENTREGADA
  ENTREGA_FALLIDA
  VENCIDA
}

class Categoria {
  nombre: String
  pideEstado: Boolean
  esPerecedero: Boolean
  subCategorias: List<Subcategoria>
}

class Subcategoria {
  nombre: String
  pertenece_a : Categoria
}

class Bien {
  descripcion : String
  foto : String
  cantidad : Double
  unidadMedida : String
  subcategoria : Subcategoria
  estado : EstaBien
  fechaVencimiento : LocalDate
}

enum EstadoBien {
  NUEVO
  USADO
}

class EntidadBeneficiaria {
  razonSocial : String
  direccion : String
  telefono : Telefono
  correoRepresentantes : List<Email>
  necesidades : List<Necesidad>
  registrarNecesidad(necesidad : Necesidad)
  confirmarEntrega(donacion : Donacion)
}

class Necesidad {
  subcategoria : Subcategoria
  tipoNecesidad : TipoNecesidad
  descripcion : String
  cantidad : Double
  donacionesAsignadas : List<Donacion>
  recibirDonacion(donacion : Donacion) : void
}

interface TipoNecesidad {
  {abstract} estaSatisfecha(donaciones : List<Donacion>, cantidadRequerida : Double) : Boolean
}

class NecesidadExtraordinaria {
  estaSatisfecha(donaciones : List<Donacion>, cantidadRequerida : Double) : Boolean
}

class NecesidadRecurrente {
  periodo : Periodo
  estaSatisfecha(donaciones : List<Donacion>, cantidadRequerida : Double) : Boolean
}

enum Periodo {
  DIARIO
  SEMANAL
  MENSUAL
  ANUAL
}

class Notificacion {
  fecha : LocalDateTime
  mensaje : String
  contacto : MedioContacto
  completada : Boolean
}

' --- RELACIONES ---

ImportadorDonantes -down-> Donante

MedioContacto <|.. Email
MedioContacto <|.. Telefono
MedioContacto <|.. WhatsApp
Notificacion --> MedioContacto

PersonaHumana -up-> Donante
PersonaJuridica -up-> Donante
PersonaJuridica -left-> Representante
PersonaJuridica -right-> TipoOrganizacion

PersonaHumana -down-> MedioContacto
PersonaJuridica -down-> MedioContacto
Representante --> Email
EntidadBeneficiaria -up-> Telefono
EntidadBeneficiaria -up-> Email
EntidadBeneficiaria .down.> Donacion

Donante -down-> RegistroDonacion
RegistroDonacion -down-> Donacion
RegistroDonacion --> Bien
Donacion -right-> Subcategoria
Donacion -down-> Bien
Categoria -down-> Subcategoria
Subcategoria -up-> Categoria

Donacion -left-> CambioEstado
CambioEstado -down-> TipoEstadoDonacion

EntidadBeneficiaria -down-> Necesidad
Necesidad -left-> Subcategoria
Necesidad -up-> Donacion

Necesidad --> TipoNecesidad
NecesidadExtraordinaria .left.|> TipoNecesidad
NecesidadRecurrente .right.|> TipoNecesidad
NecesidadRecurrente --> Periodo

Bien --> EstadoBien
Donacion --> EstadoBien

@enduml
